@@ -934,7 +934,9 @@ Burns a story or media document, distributes it to the preview server and
 returns the URL. It is designed to be the complement of C<publish_another()>,
 to be used in templates during previews to burn and distribute related
 documents so that they'll be readily available on the preview server within
-the context of previewing another document. The supported arguments are:
+the context of previewing another document. Like C<publish_another()>, it will
+not bother to preview the document if it's the same story as the currently
+burning story. The supported arguments are:
 
 =over 4
 
@@ -965,6 +967,11 @@ sub preview_another {
     my $key = ref $ba eq 'Bric::Biz::Asset::Business::Story'
       ? 'story'
       : 'media';
+
+    # Don't bother if it's the same as the current story.
+    if ($key eq 'story' and my $story = $self->get_story) {
+        return if $ba->get_id == $story->get_id;
+    }
 
     # Create a new burner, copy the notes, and do the preview.
     my $b2 = __PACKAGE__->new({ user_id => $self->get_user_id,
@@ -1185,7 +1192,8 @@ for one document type needs to trigger the publish of another document. Look
 up that document via the Bricolage API and then pass it to this method to have
 it published at the same time as the story currently being published.
 
-If the mode isn't C<PUBLISH_MODE>, the publish will not actually be
+If the mode isn't C<PUBLISH_MODE> or if the document passed in is the same
+story as the currently burning story, the publish will not actually be
 executed. Pass in a DateTime string to specify a different date and time to
 publish the document. If that date is in the future, a publish job will be
 schedule at that time. Pass in a true value as the third argument to trigger
@@ -1215,6 +1223,11 @@ sub publish_another {
     my $key = ref $ba eq 'Bric::Biz::Asset::Business::Story'
       ? 'story'
       : 'media';
+
+    # Don't bother if it's the same as the current story.
+    if ($key eq 'story' and my $story = $self->get_story) {
+        return if $ba->get_id == $story->get_id;
+    }
 
     # Figure out the publish time. Default to the same time as the story
     # that's currently being burned.
